@@ -122,6 +122,8 @@ GCTACubeExposure::GCTACubeExposure(const GCTAEventCube& cube)
     init_members();
 
     // Store energy boundaries
+    m_energies.set(cube.ebounds());
+    /*
     int nebins = cube.ebounds().size();
     for (int i = 0; i < nebins; ++i) {
         m_energies.append(cube.ebounds().emin(i));
@@ -130,6 +132,7 @@ GCTACubeExposure::GCTACubeExposure(const GCTAEventCube& cube)
         m_energies.append(cube.ebounds().emax(nebins-1));
         
     }
+    */
 
     // Set GNodeArray used for interpolation
     set_eng_axis();
