@@ -129,6 +129,8 @@ GCTACubePsf::GCTACubePsf(const GCTAEventCube& cube, const double& dmax,
     init_members();
 
     // Store energy boundaries
+    m_energies.set(cube.ebounds());
+    /*
     int nebins = cube.ebounds().size();
     for (int i = 0; i < nebins; ++i) {
         m_energies.append(cube.ebounds().emin(i));
@@ -137,6 +139,7 @@ GCTACubePsf::GCTACubePsf(const GCTAEventCube& cube, const double& dmax,
         m_energies.append(cube.ebounds().emax(nebins-1));
         
     }
+    */
 
     // Set GNodeArray used for interpolation
     set_eng_axis();
