@@ -1,7 +1,7 @@
 /***************************************************************************
  *                 GEbounds.i - Energy boundaries class                    *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -41,6 +41,7 @@ public:
     GEbounds(void);
     explicit GEbounds(const GFilename& filename);
     explicit GEbounds(const GXmlElement& xml);
+    explicit GEbounds(const GEnergies& energies);
     GEbounds(const GEbounds& ebds);
     GEbounds(const GEnergy& emin, const GEnergy& emax);
     GEbounds(const int& num, const GEnergy& emin, const GEnergy& emax,
@@ -60,6 +61,7 @@ public:
     void           remove(const int& index);
     void           reserve(const int& num);
     void           extend(const GEbounds& ebds);
+    void           set(const GEnergies& energies);
     void           set_lin(const int& num, const GEnergy& emin, const GEnergy& emax);
     void           set_log(const int& num, const GEnergy& emin, const GEnergy& emax);
     void           load(const GFilename& filename);
