@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.3.0.dev1
 
-22 March 2017
+23 March 2017
 
 
 1. Introduction
@@ -25,6 +25,8 @@ The following methods have been added:
 - GCTAResponseIrf::rspname
 - GCTARoi::contains
 - GCTAEdisp2D::fetch
+- GEbounds::set
+- GEnergies::set
 
 The following methods have been removed:
 - ...
@@ -77,7 +79,9 @@ None
 
 10. Observation module
 ----------------------
-None
+A set() method has been added to GEbounds and GEnergies to allow converting
+energy boundaries into an energy container and vice versa. In addition,
+conversion constructors have been added (#1977).
 
 
 11. Optimization module
