@@ -1,8 +1,9 @@
-2017-03-22
+2017-03-23
 
         * Version 1.3.0 released
         =========================
 
+        Add conversion methods between GEbounds and GEnergies (#1977)
         Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
         Add GCTARoi::contains method
         Do no longer interpret a CTA calibration database as file path (#1969)
